Foreign key implemented
