# apps/api/lib/api_web/controllers/users/user_json.ex
@@ -9,19 +9,23 @@ defmodule ApiWeb.UserJSON do
   end
 
   def viewusers(%{users: %Scrivener.Page{} = page}) do
+
+    if page.total_entries==0 do
+      %{message: "No user found"}
+    else
     %{
       status: "Success",
       message: "Fetched users successfully",
       users: Enum.map(page.entries, fn u ->
                                        u
-#                                       |> Map.from_struct()
-                                       |> Map.take([:id, :name, :email, :role, :business_name,:business_address, :business_email])
+                                       |> Map.take([:id, :name, :email, :role_name, :business_name])
       end),
       page_number: page.page_number,
       page_size: page.page_size,
       total_pages: page.total_pages,
       total_entries: page.total_entries
     }
+  end
   end
 
 
@@ -42,7 +46,7 @@ defmodule ApiWeb.UserJSON do
       roles: Enum.map(business, fn u ->
         u
         |> Map.from_struct()
-        |> Map.take([:id, :name, :address, :email])
+        |> Map.take([:id, :name])
       end)
     }
   end
