# apps/data/lib/data_web/schema/user.ex
@@ -1,15 +1,19 @@
 defmodule Data.Schema.User do
   use Ecto.Schema
   import Ecto.Changeset
-  @roles ["admin", "user"]
-  @businesses ["service", "product", "tech"]
+#  @roles ["admin", "user"]
+#  @businesses ["service", "product", "tech"]
 
   schema "users" do
     field :name, :string
     field :email, :string
     field :password, :string
-    field :business, :string
-    field :role, :string
+#    field :business, :string
+#    field :role, :string
+
+    many_to_many  :businesses, Data.Schema.Business, join_through: "user_businesses",on_replace: :delete
+    many_to_many  :roles , Data.Schema.Role, join_through: "user_roles",on_replace: :delete    ##bridge tablelss
+
 
     timestamps(type: :utc_datetime)
   end
@@ -17,11 +21,12 @@ defmodule Data.Schema.User do
   @doc false
   def changeset(user, attrs) do
     user
-    |> cast(attrs, [:name, :email, :password, :business, :role])
-    |> validate_required([:name, :email, :password, :business, :role])
+    |> cast(attrs, [:name, :email, :password])
+    |> validate_required([:name, :email, :password])
     |>unique_constraint(:email,message: "Email must be unique")
-    |>validate_inclusion(:role, @roles,message: "Role should be either user or admin")
-    |>validate_inclusion(:business,@businesses,message: "Businesses should be among product,service or tech")
+    |>validate_format(:email, ~r/@/)
+#    |>Ecto.Changeset.put_assoc(:roles, roles)
+#    |>Ecto.Changeset.put_assoc(:businesses, businesses)
 
   end
 end
